--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keyforge",
   "private": true,
-  "version": "0.0.0",
+  "description": "Keyforge is a tool that randomly generates passwords.",
   "type": "module",
   "engines": {
     "node": ">=24 <25",
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test:e2e": "wdio run test/wdio.conf.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -18,6 +19,17 @@
     "lint:fix:format": "pnpm lint:fix && pnpm format",
     "preview": "vite preview"
   },
+  "keywords": [
+    "react",
+    "vite",
+    "password-generator",
+    "webdriverio",
+    "mocha",
+    "automation",
+    "ci",
+    "github-actions",
+    "testing"
+  ],
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -30,12 +42,21 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
-    "eslint": "^9.33.0",
+    "@wdio/cli": "^9.19.2",
+    "@wdio/devtools-service": "9.0.0-alpha.115",
+    "@wdio/globals": "9.17.0",
+    "@wdio/local-runner": "^9.19.2",
+    "@wdio/mocha-framework": "^9.19.2",
+    "@wdio/spec-reporter": "^9.19.2",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "expect-webdriverio": "^5.4.2",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
+    "start-server-and-test": "^2.0.13",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
   }
