--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -33,6 +33,9 @@ jobs:
       - name: ⚙️ Install dependencies
         run: pnpm install
 
+      - name: 🔬 Unit tests (Vitest)
+        run: pnpm test:unit
+
       - name: 🏗️ Build app
         run: pnpm build
 
