--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test:e2e": "wdio run test/wdio.conf.js",
+    "test:smoke": "wdio run test/wdio.conf.js",
     "test:unit": "vitest run",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -52,6 +52,7 @@
     "@wdio/spec-reporter": "^9.19.2",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "expect-webdriverio": "^5.4.2",
